--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 								<a href="#features">Services</a>
 							</li>
 							<li class="submenu">
-								<a href="/pages/blue-about.html">About Us</a>
+								<a href="test-case21/pages/blue-about.html">About Us</a>
 							</li>
-							<li><a href="/pages/blue-contact.html">Contact</a></li>
+							<li><a href="test-case21/pages/blue-contact.html">Contact</a></li>
 						</ul>
 						<a class='menu-trigger'>
 							<span>Menu</span>
