--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 								<a href="#features">Services</a>
 							</li>
 							<li class="submenu">
-								<a href="test-case21/pages/blue-about.html">About Us</a>
+								<a href="pages/blue-about.html">About Us</a>
 							</li>
-							<li><a href="test-case21/pages/blue-contact.html">Contact</a></li>
+							<li><a href="pages/blue-contact.html">Contact</a></li>
 						</ul>
 						<a class='menu-trigger'>
 							<span>Menu</span>
@@ -60,8 +60,8 @@
 
 						<!-- ***** Header Buttons Start ***** -->
 						<ul class="header-buttons">
-							<li><a class="btn-nav-line" href="/pages/blue-contact.html">Contact</a></li>
-							<li><a class="btn-nav-primary" href="/pages/blue-contact.html">Leave a request</a></li>
+							<li><a class="btn-nav-line" href="pages/blue-contact.html">Contact</a></li>
+							<li><a class="btn-nav-primary" href="pages/blue-contact.html">Leave a request</a></li>
 						</ul>
 						<!-- ***** Header Buttons End ***** -->
 					</nav>
